--- a/public/junk-removal.html
+++ b/public/junk-removal.html
@@ -2,16 +2,150 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Junk Removal | Coastal Junk Removal</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Playfair+Display:wght@600&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/css/styles.css">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="/css/styles.css" />
+  <style>
+    body {
+      background: #000;
+      color: #fff;
+      font-family: 'Poppins', sans-serif;
+      margin: 0;
+    }
+    header.navbar {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 1rem 2rem;
+      background: #111;
+      border-bottom: 1px solid #222;
+    }
+    .logo {
+      font-size: 1.2rem;
+      font-weight: 600;
+      color: #fff;
+    }
+    .nav-links {
+      display: flex;
+      gap: 2rem;
+    }
+    .nav-links a {
+      color: #eee;
+      text-decoration: none;
+    }
+    .nav-links a:hover {
+      color: #800020;
+    }
+    .hamburger {
+      display: none;
+      flex-direction: column;
+      gap: 5px;
+      cursor: pointer;
+    }
+    .hamburger span {
+      width: 25px;
+      height: 3px;
+      background: #fff;
+      border-radius: 2px;
+      transition: all 0.3s ease;
+    }
+    @media (max-width: 768px) {
+      .hamburger {
+        display: flex;
+      }
+      .nav-links {
+        position: absolute;
+        top: 60px;
+        left: 0;
+        width: 100%;
+        background: #111;
+        flex-direction: column;
+        align-items: center;
+        display: none;
+        padding: 1rem 0;
+        box-shadow: 0 4px 15px rgba(0, 0, 0, 0.7);
+        z-index: 999;
+      }
+      .nav-links.active {
+        display: flex;
+      }
+      .nav-links a {
+        margin: 1rem 0;
+        font-size: 1.1rem;
+      }
+    }
+    .hero {
+      background: url('/assets/junk-removal-hero.jpg') center/cover no-repeat;
+      padding: 5rem 2rem;
+      text-align: center;
+    }
+    .hero h1 {
+      font-size: 2.5rem;
+      margin-bottom: 1rem;
+    }
+    .hero p {
+      font-size: 1.2rem;
+      max-width: 600px;
+      margin: auto;
+    }
+    .hero .cta-button {
+      display: inline-block;
+      margin-top: 2rem;
+    }
+    .cta-button {
+      padding: 1rem 2rem;
+      border-radius: 30px;
+      background: #800020;
+      color: white;
+      font-weight: 600;
+      font-size: 1rem;
+      border: none;
+      cursor: pointer;
+      transition: background 0.3s;
+    }
+    .cta-button:hover {
+      background: #5a0015;
+    }
+    .services {
+      padding: 2rem;
+      max-width: 800px;
+      margin: auto;
+      text-align: center;
+    }
+    .services h2 {
+      font-size: 1.8rem;
+      margin-bottom: 1rem;
+    }
+    .services ul {
+      text-align: left;
+      line-height: 2;
+      padding-left: 0;
+      list-style: none;
+    }
+    .services ul li::before {
+      content: '•';
+      color: #800020;
+      font-weight: bold;
+      display: inline-block;
+      width: 1em;
+    }
+    .services .cta-button {
+      margin-top: 2rem;
+    }
+    footer {
+      text-align: center;
+      padding: 1.5rem;
+      background: #111;
+      color: #888;
+      font-size: 0.9rem;
+    }
+  </style>
 </head>
 <body>
-
 <header class="navbar">
-  <img src="/assets/logo.png" alt="Coastal Junk Removal Logo" style="height: 50px;">
+  <div class="logo">Coastal Junk Removal</div>
   <div class="hamburger" onclick="toggleMenu()">
     <span></span>
     <span></span>
@@ -22,35 +156,34 @@
     <a href="/junk-removal.html">Junk Removal</a>
     <a href="/moving-services.html">Moving Services</a>
     <a href="/contact.html">Contact</a>
-    <a href="/login.html">Admin</a>
   </nav>
 </header>
 
-<section class="hero" style="background: url('/assets/hero.png') center/cover no-repeat;">
+<section class="hero">
   <div class="hero-content">
-    <h1>Professional Junk Removal Services</h1>
-    <p>Full-service cleanouts for homes, estates, and businesses across Coastal Virginia.</p>
-    <a href="/contact.html" class="cta-button">Book Junk Removal</a>
+    <h1>Junk Removal Services</h1>
+    <p>Professional, fast, and respectful junk removal for homes, offices, and estates across Coastal Virginia.</p>
+    <a href="/contact.html" class="cta-button">Schedule Service</a>
   </div>
 </section>
 
 <section class="services">
   <div class="service">
-    <h2>White-Glove Junk Removal</h2>
-    <p>We provide detailed, respectful cleanouts tailored for homes, estates, and office properties. Our team handles bulky furniture, electronics, appliances, and debris with precision and care — always protecting your property and maintaining professionalism.</p>
-    <ul style="text-align:left; padding-left: 1rem;">
-      <li>Estate & Foreclosure Cleanouts</li>
-      <li>Furniture, Appliance & Debris Removal</li>
-      <li>Garage, Basement & Attic Cleanups</li>
-      <li>Donation, Recycling & Disposal</li>
-      <li>Discreet & On-Time Service</li>
+    <h2>What We Offer</h2>
+    <p>We specialize in full-service junk removal tailored for residential and commercial needs. Our trained team ensures fast, courteous, and careful service, from single-item pickups to full estate cleanouts.</p>
+    <ul>
+      <li>Estate Cleanouts</li>
+      <li>Garage, Basement & Attic Clearouts</li>
+      <li>Office & Commercial Cleanouts</li>
+      <li>Appliance & Furniture Removal</li>
+      <li>Eco-Friendly Donations & Disposal</li>
     </ul>
-    <a href="/contact.html" class="cta-button">Get Estimate</a>
+    <a href="/contact.html" class="cta-button">Book Junk Removal</a>
   </div>
 </section>
 
-<footer class="footer">
-  <p>&copy; 2024 Coastal Junk Removal | Hauling Solutions You Can Trust</p>
+<footer>
+  <p>&copy; 2024 Coastal Junk Removal | Clean Spaces, Professional Service</p>
 </footer>
 
 <script>
@@ -58,6 +191,5 @@ function toggleMenu() {
   document.getElementById('navMenu').classList.toggle('active');
 }
 </script>
-
 </body>
 </html>
