--- a/public/contact.html
+++ b/public/contact.html
@@ -4,70 +4,152 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Contact Coastal Junk Removal</title>
-  <meta name="description" content="Get in touch with Coastal Junk Removal for premier hauling and moving services across Coastal Virginia. Schedule today!">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <title>Contact | Coastal Junk Removal</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="/css/styles.css" />
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-XXXXXXXXXX');
+  </script>
   <style>
     body {
       margin: 0;
-      font-family: 'Poppins', sans-serif;
       background: #000;
       color: #fff;
+      font-family: 'Poppins', sans-serif;
     }
-    .contact-section {
+    header.navbar {
       display: flex;
-      flex-direction: column;
+      justify-content: space-between;
       align-items: center;
-      padding: 4rem 1rem;
-    }
-    .contact-box {
+      padding: 1rem 2rem;
       background: #111;
-      padding: 2rem;
-      border-radius: 16px;
-      max-width: 600px;
-      width: 100%;
-      box-shadow: 0 0 15px rgba(255,255,255,0.05);
+      border-bottom: 1px solid #222;
     }
-    .contact-box h2 {
+    .logo {
+      font-size: 1.2rem;
+      font-weight: 600;
+    }
+    .nav-links {
+      display: flex;
+      gap: 2rem;
+    }
+    .nav-links a {
+      color: #eee;
+      text-decoration: none;
+    }
+    .nav-links a:hover {
+      color: #800020;
+    }
+    .hamburger {
+      display: none;
+      flex-direction: column;
+      gap: 5px;
+      cursor: pointer;
+    }
+    .hamburger span {
+      width: 25px;
+      height: 3px;
+      background: #fff;
+      border-radius: 2px;
+      transition: all 0.3s ease;
+    }
+    @media (max-width: 768px) {
+      .hamburger {
+        display: flex;
+      }
+      .nav-links {
+        position: absolute;
+        top: 60px;
+        left: 0;
+        width: 100%;
+        background: #111;
+        flex-direction: column;
+        align-items: center;
+        display: none;
+        padding: 1rem 0;
+        box-shadow: 0 4px 15px rgba(0, 0, 0, 0.7);
+        z-index: 999;
+      }
+      .nav-links.active {
+        display: flex;
+      }
+      .nav-links a {
+        margin: 1rem 0;
+        font-size: 1.1rem;
+      }
+    }
+    .hero {
+      background: url('/assets/contact-hero.jpg') center/cover no-repeat;
+      padding: 6rem 2rem;
       text-align: center;
+    }
+    .hero h1 {
+      font-size: 2.5rem;
       margin-bottom: 1rem;
     }
-    .contact-box form {
+    .hero p {
+      font-size: 1.1rem;
+      color: #ccc;
+    }
+    main {
+      max-width: 600px;
+      margin: 3rem auto;
+      padding: 2rem;
+      background: #111;
+      border-radius: 12px;
+      box-shadow: 0 0 20px rgba(255,255,255,0.05);
+    }
+    form {
       display: flex;
       flex-direction: column;
       gap: 1rem;
     }
-    .contact-box input, .contact-box textarea {
-      padding: 0.75rem;
+    label {
+      display: flex;
+      flex-direction: column;
+      font-weight: 600;
+      gap: 0.3rem;
+    }
+    input, textarea {
+      padding: 0.85rem;
       border-radius: 8px;
       border: none;
+      background: #222;
+      color: #eee;
       font-size: 1rem;
     }
-    .contact-box button {
-      padding: 0.75rem;
-      background: #800020;
-      border: none;
-      border-radius: 50px;
-      color: #fff;
-      font-weight: bold;
-      cursor: pointer;
-      transition: background 0.3s ease;
+    input::placeholder, textarea::placeholder {
+      color: #aaa;
     }
-    .contact-box button:hover {
+    .cta-button {
+      padding: 1rem;
+      border-radius: 50px;
+      background: #800020;
+      color: white;
+      font-weight: bold;
+      font-size: 1.1rem;
+      border: none;
+      cursor: pointer;
+      transition: background 0.3s;
+    }
+    .cta-button:hover {
       background: #5a0015;
     }
-    .contact-details {
-      margin-top: 2rem;
+    footer {
       text-align: center;
-      font-size: 0.95rem;
-      color: #ccc;
+      padding: 2rem;
+      color: #777;
     }
   </style>
 </head>
 <body>
 <header class="navbar">
-  <div class="logo"><img src="/assets/logo.png" alt="Coastal Junk Removal Logo" style="height: 50px;"></div>
+  <div class="logo">Coastal Junk Removal</div>
   <div class="hamburger" onclick="toggleMenu()">
     <span></span>
     <span></span>
@@ -81,28 +163,35 @@
   </nav>
 </header>
 
-<section class="contact-section">
-  <div class="contact-box">
-    <h2>Contact Coastal Junk Removal</h2>
-    <form action="/thank-you.html" method="POST">
-      <input type="text" name="name" placeholder="Your Name" required />
-      <input type="email" name="email" placeholder="Your Email" required />
-      <input type="text" name="phone" placeholder="Your Phone" required />
-      <textarea name="message" rows="5" placeholder="Tell us about your project..." required></textarea>
-      <button type="submit">Send Message</button>
-    </form>
-  </div>
-
-  <div class="contact-details">
-    <p><strong>Service Hours:</strong> Mon–Sat, 8am – 3pm</p>
-    <p><strong>Phone:</strong> (757) 279-8647</p>
-    <p><strong>Service Areas:</strong> Newport News, Williamsburg, Norfolk, Hampton Roads, and more.</p>
-    <p>We respond within 24 hours. Your space deserves professional care.</p>
-  </div>
+<section class="hero">
+  <h1>Contact Coastal Junk Removal</h1>
+  <p>Reach out for fast, professional service across Coastal Virginia.</p>
 </section>
 
-<footer class="footer">
-  <p>&copy; 2024 Coastal Junk Removal | Clean Service. Clear Pricing.</p>
+<main>
+  <form action="https://formsubmit.co/info@coastaljrva.com" method="POST">
+    <input type="hidden" name="_next" value="https://coastaljrva.com/thank-you.html">
+    <input type="hidden" name="_captcha" value="false">
+    <input type="hidden" name="_subject" value="New Contact Submission from CoastalJRVA">
+
+    <label>Name
+      <input type="text" name="name" required placeholder="Your Full Name">
+    </label>
+    <label>Email
+      <input type="email" name="email" required placeholder="you@example.com">
+    </label>
+    <label>Phone
+      <input type="tel" name="phone" required placeholder="(123) 456-7890">
+    </label>
+    <label>Message
+      <textarea name="message" rows="5" required placeholder="Tell us about your project or request..."></textarea>
+    </label>
+    <button type="submit" class="cta-button">Send Message</button>
+  </form>
+</main>
+
+<footer>
+  <p>&copy; 2024 Coastal Junk Removal. All rights reserved.</p>
 </footer>
 
 <script>
